syntax = "proto2";

enum MediaCodecType
{
    MediaCodecAudioPCM = 1;
    MediaCodecAudioAACLC = 2;
    MediaCodecAudioAACLCADTS = 4;
    MediaCodecVideoH264BP = 3;
    MediaCodecVideoVP9 = 5;
    MediaCodecVideoAV1 = 6;
    MediaCodecVideoH265 = 7;
}

enum AudioStreamType
{
    None = 0;
    Speech = 1;
    System = 2;
    Media = 3;
    Alarm = 4;
}

message AudioConfiguration
{
    required uint32 sample_rate = 1;
    required uint32 number_of_bits = 2;
    required uint32 number_of_channels = 3;
}

message Start
{
    required int32 session_id = 1;
    required uint32 configuration_index = 2;
}

message Ack
{
    required int32 session_id = 1;
    required uint32 ack = 2;
}

message MicrophoneRequest
{
    required bool open = 1;
    optional bool anc_enabled = 2;
    optional bool ec_enabled = 3;
    optional int32 max_unacked = 4;
}

message MicrophoneResponse
{
    required int32 status = 1;
    required uint32 session_id = 2;
}

enum VideoFocusMode
{
    Focused = 1;
    Unfocused = 2;
}

message VideoFocusRequestNotification
{
    enum VideoFocusReason
    {
        Reason1 = 1;
        Reason2 = 2;
    }

    optional int32 disp_channel_id = 1;
    required VideoFocusMode mode = 2;
    required VideoFocusReason reason = 3;
}

message VideoFocusNotification
{
    required VideoFocusMode mode = 1;
    required bool unsolicited = 2;
}

message MediaSetupRequest
{
    required MediaCodecType type = 1;
}

message Config
{
    enum ConfigStatus
    {
        Device = 1;
        HeadUnit = 2;
    }
    required ConfigStatus status = 1;
    required uint32 max_unacked = 2;
    repeated uint32 configuration_indices = 3;
}
